@@ -1280,8 +1280,7 @@ sub indexlink () { #{{{
 
 my $wikilock;
 
-sub lockwiki (;$) { #{{{
-	my $wait=@_ ? shift : 1;
+sub lockwiki () { #{{{
 	# Take an exclusive lock on the wiki to prevent multiple concurrent
 	# run issues. The lock will be dropped on program exit.
 	if (! -d $config{wikistatedir}) {
@@ -1289,20 +1288,8 @@ sub lockwiki (;$) { #{{{
 	}
 	open($wikilock, '>', "$config{wikistatedir}/lockfile") ||
 		error ("cannot write to $config{wikistatedir}/lockfile: $!");
-	if (! flock($wikilock, 2 | 4)) { # LOCK_EX | LOCK_NB
-		if ($wait) {
-			debug("wiki seems to be locked, waiting for lock");
-			my $wait=600; # arbitrary, but don't hang forever to 
-			              # prevent process pileup
-			for (1..$wait) {
-				return if flock($wikilock, 2 | 4);
-				sleep 1;
-			}
-			error("wiki is locked; waited $wait seconds without lock being freed (possible stuck process or stale lock?)");
-		}
-		else {
-			return 0;
-		}
+	if (! flock($wikilock, 2)) { # LOCK_EX
+		error("failed to get lock");
 	}
 	return 1;
 } #}}}
