@@ -18,3 +18,5 @@ with no ill effects. Crank `MaxClients` up to 256? No problem..
 And there's no real reason to allow more than one ikiwiki cgi to run at a
 time. Since almost all uses of the CGI lock the index, only one can really
 be doing anything at a time. --[[Joey]]
+
+[[done]]
